# intelligent-voice-over

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  conftest.py  electron-builder.yml  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements-venv.txt  tsconfig.json  vite.config.ts
docs/: compliance-and-licenses.md  http-api-profiles.md  local-model-command-profiles.md  local-model-inventory-and-recommendations.md  local-model-setup.md  translation-style-guide.md  ui-local-preview.md  ui-usability-adjustment.md  windows-packaging.md
electron/: ipc-handlers.ts  logger.ts  main.ts  paths.ts  port-utils.ts  preload.ts  python-service.ts  window-manager.ts
examples/: http_asr_profile.example.json  http_diarization_profile.example.json  http_separation_profile.example.json  http_translation_lm_studio_qwen36_35b.example.json  http_translation_openai_compatible.example.json  http_translation_profile.example.json  http_tts_profile.example.json  local_command_profiles.local_test_gpu.json  local_command_profiles.mock.json  local_command_profiles.real_asr.json  local_command_profiles.real_diarization.json  local_command_profiles.real_dry_run.json  local_command_profiles.real_full_gpu_f5_diarization.json  local_command_profiles.real_gpu_fast_preview.json  local_command_profiles.real_gpu_quality.json  (+8 more)
server/: dependencies.py  main.py  pipeline_runner.py  pyproject.toml  venv_setup.py
server/routers/: accounts.py  environment.py  export.py  files.py  health.py  local_models.py  pipeline.py  projects.py  providers.py  schemes.py  segments.py  settings.py  stage_configs.py
src/: App.vue  (+1 more)
(+292 files in other folders)
