[project]
name = "intelligent-voice-over"
version = "0.1.0"
description = "Local-first desktop app for AI-assisted video dubbing."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "PolyForm-Noncommercial-1.0.0"
dependencies = [
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "jsonpath-ng>=1.6.0",
    "pydantic>=2.7.0",
    "pyside6>=6.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
local-asr = [
    "faster-whisper>=1.2.0",
]
local-separation = [
    "demucs==4.0.1",
    "soundfile>=0.13.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]
local-tts-f5 = [
    "f5-tts==1.1.20",
    "transformers<5",
]
local-tts-cosyvoice = [
    "modelscope>=1.20.0",
    "soundfile>=0.13.0",
]

[project.scripts]
ivo = "ivo.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-qt>=4.4.0",
    "pyinstaller>=6.20.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ivo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["ivo"]
